--- a/templates/detail-movie.html
+++ b/templates/detail-movie.html
@@ -3,7 +3,7 @@
 <head><!--La cabecera-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cac-Movies</title>
+    <title>Cac-Movies - Detalle de película</title>
     <link rel="Cac-Movies icon" href="../static/img/favicon.ico" type="image/x-icon">
 
 </head>
