--- a/templates/register.html
+++ b/templates/register.html
@@ -75,7 +75,7 @@
                     </div>
  
                     <!--Hago un botón con el valor submit y el atribuo value para enviar los datos ingresados-->
-                    <input type="submit" value="Enviar">  
+                    <input type="button" value="Enviar" id="btn-send">  
                     <!-- Los tipos de inputs en html en:
                          https://www.w3schools.com/html/html_form_input_types.asp-->
 
@@ -88,5 +88,6 @@
         <a href="#">Preguntas frecuentes</a>
         <a href="#">Ayuda</a>
     </footer>
+    <script src="../static/js/validation-register.js"></script>
 </body>
 </html> 
