--- a/static/css/style.css
+++ b/static/css/style.css
@@ -56,7 +56,21 @@ h2 {
 }
 
 .container{
-    background-color:;
     max-width: 1200px;
-    height: ;
+    /* max-height: 800; */
+
+    /* Relleno o espaciado: */
+    /* padding: 50px 20px; */
+    padding: 20px;
+
+    /* Márgenes: */
+    margin: 30px;
+
+   /* Bordes: */
+   /* border: 10px solid saddlebrown; */
+   /* border-width: 5px 10px; t/b l/r*/
+   /* border-width: 5px 10px 15px; t l/r b*/
+   /* border-width: 5px 10px 15px 20 px;
+   border-style: solid;
+   border-color: saddlebrown */
 }
