--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,8 +17,9 @@
 /* Selector universal */
 
 * {
-   /* margin:"0";
-    padding:"0";  */
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family:'Nunito', 'Sans-serif';
 } 
 
@@ -73,4 +74,6 @@ h2 {
    /* border-width: 5px 10px 15px 20 px;
    border-style: solid;
    border-color: saddlebrown */
+
+   
 }
