--- a/static/css/style.css
+++ b/static/css/style.css
@@ -76,6 +76,12 @@ h2 {
    /* border-width: 5px 10px 15px 20 px;
    border-style: solid;
    border-color: saddlebrown */
-
    
+}
+
+.btn-cac{
+    background-color: var(--primary-color);
+    padding: 10px;
+    color:#FFF;
+    border-radius: 10px
 }
