--- a/static/css/style.css
+++ b/static/css/style.css
@@ -236,4 +236,9 @@ letra de un párrafo, a la primer línea de un texto, etc.*/
 
 
 
+/* Transformaciones */
 
+#movie-1{
+
+    transform: rotate(20deg);
+}
