--- a/static/css/style.css
+++ b/static/css/style.css
@@ -44,6 +44,18 @@ h2 { /*Selector por etiqueta*/
     z-index: 9999; 
 }
 
+nav{
+    display: flex;
+    flex-direction: column;
+    /* La división de columnas va a depender de la cantidad de hijos que tenga el contenedor.
+    Y con flex-direction: column o por defecto (row); puedo cambiar el comportamiento de los elementos o ítems,
+    la propiedad flex-direction establece cuál es el eje principal o secundario en cuestión. */
+
+    /* Alinear con respecto al eje principal: */
+    /* justify-content: center; start; end; space-between; space-around; space-evenly; */
+    justify-content: space-between;
+}
+
 /*Selector por clase*/
 .nav-links{
     list-style: none;
@@ -74,6 +86,10 @@ h2 { /*Selector por etiqueta*/
     /* Para que el tamaño de la fuente sea más grande: */
     font-weight: bold; 
 } 
+
+#logo a{
+    color:#FFF;
+}
 
 #logo:hover{
     /* animation: name duration timing-function delay iteration-count direction fill-mode; */
@@ -257,7 +273,7 @@ letra de un párrafo, a la primer línea de un texto, etc.*/
     /* transform: rotate(20deg); */
     /* transform: scale(0.5); */
     /* transform: translate(40px,80px);*/
-    transform: rotate(20deg) scale(1.2) translate(20px, 50px) skew(40deg);
+    /* transform: rotate(20deg) scale(1.2) translate(20px, 50px) skew(40deg); */
     /* Ver cómo usar las funciones en 3D */
 } 
 
@@ -267,8 +283,8 @@ letra de un párrafo, a la primer línea de un texto, etc.*/
 transitar de un estado inicial a un estado final a partir de determinadas propiedades. */
 
 #movie-2{
-    background-color: red;
-    transition: all 5.5s linear 1s;
+    /* background-color: red;
+    transition: all 5.5s linear 1s; */
     /* La propiedad transition se puede desglosar y trabajar por partes para afectar propiedades en particular */
 }
 
